fix Z-index modal

--- a/src/common/modal/MyModal.module.scss
+++ b/src/common/modal/MyModal.module.scss
@@ -15,7 +15,7 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    z-index: 10098;
+    z-index: 98;
     width: 100%;
     height: 100%;
     outline: none;
@@ -77,7 +77,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 10099;
+    z-index: 99;
     //background: $site-color-12;
     backdrop-filter: blur(12px);
   }
